--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -16,7 +16,7 @@
     "button": {
       "go": "話去就去!",
       "scan_qr_code": "按此進入",
-      "ride": "話搭就搭!"
+      "ride": "按此上車"
     }
   },
   "travel_record": {
