--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -5,7 +5,7 @@
     "you_have_entered": "你已進入",
     "form": {
       "venue_name": {
-        "label": "進入",
+        "label": "進入888888",
         "placeholder": "按此進入2"
       },
       "taxi": {
