--- a/src/locales/traditionalChinese/mainScreen.json
+++ b/src/locales/traditionalChinese/mainScreen.json
@@ -14,7 +14,8 @@
       },
       "report": {
         "label": "報告確診或初步確診",
-        "placeholder": "用戶如被確診或初步確診，須上載其出行紀錄給衛生防護中心，協助個案調查發提供感染風險通知給其他相關用戶"
+        // "placeholder": "用戶如被確診或初步確診，須上載其出行紀錄給衛生防護中心，協助個案調查發提供感染風險通知給其他相關用戶"
+        "placeholder": "用戶如被確診或初步確診..."
       }
     },
     "button": {
